# ULTRA-B

./: .gitignore  EURJPY.yaml  LICENSE  MEMORY.md  README.md  USDJPY.yaml  cursor.py  dual_runtime_upgrade.md  engine.py  features.py  funnel.yaml  indicator.py  ledger_trade.py  policy.py  pyproject.toml  requirement.txt  split_cursor.py  strategy.py  trade_funnel.py
analysis/: terrain_survey.py
dev-log/: 20260418-notes.md  update-logs.md
docs/: 101-trader-thinking.html  201-event.html  202-candel-events.html  203-pivot-events.html  301-context.html  302-structure-context.html  303-liqudity-context.html  304-SD-context.html  305-orderflow-context.html  305-orderflow-details.html  309-normalizer-context.html  310-fusion-context.html  311-EC-context.html  312-EC-context-group.html  401-hypothesis-DAG.html  401-hypothesis.html  402-hypothesis-none.html  402-hypothesis-phA.html  402-hypothesis-phB.html  402-hypothesis-phC.html  402-hypothesis-phD.html  402-hypothesis-phE.html  402-hypothesis-phX.html  403-shadow-thesis.html  40x-hypothesis-migration.html  501-entry-details.html  501-entry-diagram.html  501-entry.html  502-TPSL-methods.html  601-trade-analysis-details.html
src/: README.md
symbol-config/: AUDUSD.yaml  EURUSD-v3.yaml  EURUSD.yaml  GBPJPY.yaml  GBPUSD.yaml
tests/: PHASE_CHUNK_VALIDATION.md  test_evidence_compiler.py  test_headless_runtime_reuse.py  test_hypothesis_classifier.py  test_hypothesis_phase_d_simplify.py  test_hypothesis_restart_hierarchy.py  test_hypothesis_state_persistence.py  test_layer2_event_contract.py  test_layer5_layer6.py  (+6 more)
(+74 files in other folders)
