[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ultrab"
version = "0.1.0"
description = "ULTRA-B replay and time-lapse forward-test framework"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "Flask",
  "numba",
  "numpy",
  "pandas",
  "plotly",
  "PyYAML",
]

[project.scripts]
ultrab-replay = "ultrab.replayer.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"ultrab.replayer" = ["config.yaml", "templates/*.html", "static/icons/*.svg"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
norecursedirs = [".git", ".pytest_cache", "ln-data", "ln-notes"]
